@@ -35,7 +35,6 @@ import com.ly.train.flower.common.service.FlowerService;
 import com.ly.train.flower.common.service.config.ServiceConfig;
 import com.ly.train.flower.common.util.Assert;
 import com.ly.train.flower.common.util.StringUtil;
-import com.ly.train.flower.common.util.URL;
 import com.ly.train.flower.config.FlowerConfig;
 import com.ly.train.flower.registry.Registry;
 import com.ly.train.flower.registry.config.ServiceInfo;
@@ -85,10 +84,12 @@ public class ServiceFactory extends AbstractInit {
     ServiceConfig serviceConfig = new ServiceConfig();
     serviceConfig.setServiceName(serviceName);
     serviceConfig.setServiceMeta(serviceMeta);
+    serviceConfig.setApplication(flowerConfig.getName());
     flowerFactory.getServiceActorFactory().buildServiceActor(serviceConfig);
 
 
     Set<Registry> registries = flowerFactory.getRegistry();
+    // logger.info("注册中心 {} : {}", serviceName, registries.size());
     if (registries.isEmpty()) {
       return;
     }
@@ -98,11 +99,12 @@ public class ServiceFactory extends AbstractInit {
 
     ServiceInfo serviceInfo = new ServiceInfo();
     serviceInfo.setApplication(flowerConfig.getName());
-    serviceInfo.addAddress(new URL("flower", flowerConfig.getHost(), flowerConfig.getPort()));
+    serviceInfo.addAddress(flowerConfig.toURL());
     serviceInfo.setCreateTime(new Date());
     serviceInfo.setClassName(serviceClassName);
     serviceInfo.setServiceMeta(serviceMeta);
     serviceInfo.setServiceName(serviceName);
+    serviceInfo.setApplication(flowerConfig.getName());
     for (Registry registry : registries) {
       registry.register(serviceInfo);
     }
@@ -202,10 +204,13 @@ public class ServiceFactory extends AbstractInit {
       List<ServiceInfo> serviceInfos = registry.getProvider(null);
       if (serviceInfos != null) {
         for (ServiceInfo serviceInfo : serviceInfos) {
+          // logger.info("注册中心获取连接: {}", serviceInfo);
           if (serviceInfo.getServiceName().equals(serviceConfig.getServiceName())) {
             // add service address
             serviceConfig.setAddresses(serviceInfo.getAddresses());
             serviceMeta = serviceInfo.getServiceMeta();
+            serviceConfig.setApplication(serviceInfo.getApplication());
+            break;
           }
         }
       }
